# leg_tracker

./: .travis.yml  CMakeLists.txt  LegMsg.msg  README.md  kalman_filter_plugin.xml  package.xml
config/: general_parameters.yaml  kalman_filter.yaml  parameter.yaml  parameter_many_persons.yaml  parameter_one_person.yaml
include/: AuctionAlgorithm.h  Matrix.h  Munkres.h  bounding_box.h  kalman_filter.h  leg.h  leg_tracker.h  matrix.h  munkres.h  person.h
include/Rest/: Ellipse.h  Entity.h  MHT.h  Measurement.h
include/filter/: ParticleFilter.h  PositionTracker.cpp  PositionTracker.h
include/leg_tracker/: bounding_box.h  leg.h  leg_tracker.h  munkres.h
launch/: leg_tracker.launch  leg_tracker_many_persons.launch  leg_tracker_one_person.launch  leg_tracker_one_person.yaml  parameter.yaml
msg/: LegMsg.msg  LegMsgStamped.msg  LegTrackerMessage.msg  PersonMsg.msg
src/: .leg_tracker.cpp.kate-swp  Entity.cpp  MHT.cpp  Matrix.cpp  Measurement.cpp  Munkres.cpp  cob_leg_tracker.cpp  joint_leg_tracker.cpp  kalman_filter.cpp  leg_tracker.cpp  leg_tracker_node.cpp  matrix.cpp  munkres.cpp
